--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "",
   "main": "server/index.js",
   "dependencies": {
+    "boom": "^7.3.0",
+    "bpc_client": "^1.2.1",
+    "hapi": "^18.1.0",
     "kafka-node": "^4.1.3"
   },
   "devDependencies": {},
